Fix gerrit needs sync check
This now does a pre-check that the list of files matches. If the list of files doesn't match, we move on to checking hashes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2022",
-        "lib": ["ES2022", "DOM"],
+        "target": "ESNext",
+        "lib": ["ESNext", "DOM"],
         "jsx": "react",
         "sourceMap": true,
         "rootDir": "src",
